# ingestipy

./: .gitignore  README.md  pyproject.toml
ingestipy/: ingestipy.py
tests/: expected_output.txt  test_ingestipy.py
tests/sample_project/: file1.txt  ignore.txt
tests/sample_project/subdir/: file2.txt
